# console-draw-haskell

./: .gitignore  README.md  console-draw-haskell.cabal  run
src/: BucketFill.hs  Canvas.hs  Command.hs  CommandInterpreter.hs  Common.hs  Drawing.hs  Main.hs
test/: BucketFillSpec.hs  CanvasSpec.hs  CommandSpec.hs  DrawingSpec.hs
