name:              console-draw-haskell
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable console-draw-haskell
  main-is:         Main.hs
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   text,
                   containers,
                   console-draw-haskell

library
  ghc-options:     -Wall
  exposed-modules: Common, Canvas, Drawing, BucketFill, Command, Main
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   text,
                   containers

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  build-depends:   base,
                   containers,
                   console-draw-haskell,
                   hspec
